# BomberTalk

./: .gitignore  BOMBERMAN_CLONE_PLAN.md  CLAUDE.md  CMakeLists.txt  DEPLOY_AND_TEST.md  README.md  build-all.sh
.claude/commands/: run-68k.md  speckit.feedback.md
.github/workflows/: ci.yml  release.yml
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
books/: Black_Art_of_Macintosh_Game_Programming_1996.txt  C Programming - A Modern Approach - 2nd_Ed(C89, c99) - King by .txt  How_To_Write_Macintosh_Software_1992.txt  Mac_Game_Programming_2002.txt  Macintosh_Game_Animation_1985.txt  Macintosh_Game_Programming_Techniques_1996.txt  Programming_QuickDraw_1992.txt  Sex_Lies_and_Video_Games_How_to_Write_a_Macintosh_Arcade_Game_1996.txt  Tricks_Of_The_Mac_Game_Programming__Gurus_1995.txt
include/: bomb.h  game.h  input.h  net.h  player.h  renderer.h  screens.h  tilemap.h
logs/quit-crash-debug-2026-04-12/: 6200_858a48c.txt  6200_lobby_quit.txt  6200_log.txt  6200_log2.txt  6200_log3.txt  6200_log4.txt  6200_log5.txt  6200_log6.txt  6200_log_r2.txt  6200_log_r2_unix.txt  6200_log_r3.txt  6200_log_unix.txt  6200_quit_crash.txt  6200_skip_shutdown.txt  6200_streamfree_fix.txt  6400_858a48c.txt  6400_log.txt  6400_log2.txt  6400_log3.txt  6400_log4.txt  6400_log5.txt  6400_log6.txt  6400_log_r2.txt  6400_log_r2_unix.txt  6400_log_r3.txt  6400_log_unix.txt  6400_quit_clean.txt  6400_streamfree_fix.txt  FIX_PLAN.md  QUIT_CRASH_DEBUG_PROMPT.md  gemini_debug_prompt.md  macse_log.txt  macse_log2.txt  macse_log3.txt  macse_log4.txt  macse_quit_clean.txt  macse_streamfree_fix.txt  performa6200_stdlog.txt  performa6200_stdlog3.txt  socat_r3.txt
maps/: level1.h
notes/: known-issues.md
resources/: bombertalk.r  bombertalk_gfx.r  bombertalk_gfx_lowmem.r  bombertalk_size.r  rockport-prompts.md
resources/gfx/: bomb_color_f0.pict  bomb_color_f1.pict  bomb_color_f2.pict  bomb_se_f0.pict  bomb_se_f1.pict  bomb_se_f2.pict  splash_color.pict  splash_se.pict
scripts/: embed-gfx.py
specs/001-v1-alpha/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-v1-alpha/checklists/: build-verification.md
specs/001-v1-alpha/contracts/: asset-pipeline.md  network-protocol.md
specs/002-perf-extensibility/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-perf-extensibility/checklists/: requirements.md
specs/002-perf-extensibility/contracts/: network-protocol.md
specs/003-optimize-correctness/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-optimize-correctness/checklists/: perf-correctness.md  requirements.md
specs/003-optimize-correctness/contracts/: renderer-api.md  tilemap-api.md
specs/004-smooth-movement/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-smooth-movement/checklists/: requirements.md
specs/004-smooth-movement/contracts/: movement-api.md  network-protocol.md
specs/005-network-authority/: data-model.md  peertalk-drain-errors.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-network-authority/checklists/: requirements.md
specs/005-network-authority/contracts/: network-protocol.md
specs/006-renderer-optimization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-renderer-optimization/checklists/: requirements.md
specs/006-renderer-optimization/contracts/: renderer-api.md
specs/007-timer-fixes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-timer-fixes/checklists/: requirements.md
specs/008-perf-hotpath/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-perf-hotpath/checklists/: requirements.md
specs/008-perf-hotpath/contracts/: tilemap-api.md
specs/010-renderer-review-cleanup/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/010-renderer-review-cleanup/checklists/: requirements.md
src/: bomb.c  input.c  main.c  net.c  player.c  renderer.c  screen_game.c  screen_loading.c  screen_lobby.c  screen_menu.c  screens.c  tilemap.c
tools/: logwatch.py
